crates/vize_canon/src/batch/virtual_project/snapshots/vize_canon__batch__virtual_project__tests__props_destructure_default_type_mismatch_diagnostics.snap
---
source: crates/vize_canon/src/batch/virtual_project/tests.rs
expression: diagnostic_snapshot(diagnostics)
---
[
    DiagnosticSnapshot {
        line: 1,
        column: 14,
        message: "Vue compile error [DEFINE_PROPS_DESTRUCTURE_DEFAULT_TYPE]: Default value of prop \"msg\" does not match declared type.",
        code: None,
        severity: 1,
        block_type: None,
    },
]
