crates/vize_canon/src/batch/virtual_project/snapshots/vize_canon__batch__virtual_project__tests__pruned_tsconfig.snap
---
source: crates/vize_canon/src/batch/virtual_project/tests.rs
expression: tsconfig_content.as_str()
---
{
  "compilerOptions": {
    "allowImportingTsExtensions": true,
    "noEmit": true,
    "noUncheckedSideEffectImports": false
  },
  "exclude": [],
  "include": [
    "__vize_helpers.d.ts",
    "__vize_vue_modules.d.ts",
    "src/App.vue.ts"
  ]
}
