crates/vize_canon/src/batch/virtual_project/snapshots/vize_canon__batch__virtual_project__tests__reexported_vue_interface_props_virtual_ts.snap
---
source: crates/vize_canon/src/batch/virtual_project/tests.rs
expression: snapshot_text(virtual_parent.content.as_str())
---
/// <reference lib="es2022" />
/// <reference lib="dom" />
/// <reference lib="dom.iterable" />
// ============================================
// Virtual TypeScript for Vue SFC Type Checking
// Generated by vize
// ============================================

// Shared preamble hoisted to the program-wide __vize_helpers.d.ts
// ========== Module Scope (imports) ==========

import type { BaseProps } from "./index";

export interface ParentWidgetProps extends BaseProps {}

import Child from "./Child.vue.ts";

// ========== Exported Types ==========
export type Props = ParentWidgetProps;

// ========== Setup Scope ==========
function __setup() {
  // Compiler macros (setup-scope only; signatures hoisted to the shared helpers file)
  const defineProps = __vize_defineProps;
  const defineEmits = __vize_defineEmits;
  const defineExpose = __vize_defineExpose;
  const defineModel = __vize_defineModel;
  const defineSlots = __vize_defineSlots;
  const withDefaults = __vize_withDefaults;
  const useTemplateRef = __vize_useTemplateRef;
  // Mark compiler macros as used
  void defineProps; void defineEmits; void defineExpose; void defineModel; void defineSlots; void withDefaults; void useTemplateRef;

  // User setup code




  const props = defineProps<ParentWidgetProps>();

  // @vize-map: 1230:1295 -> 0:184

  // ========== Template Scope (inherits from setup) ==========
  // Anchor before the template scope shadows `props`
  void props;
  ;(function __template() {
    // Vue template context (delegates to ComponentPublicInstance)
    // @ts-ignore TS2694/TS2307: a `vue` without `ComponentPublicInstance` must degrade template context extras to unchecked, never error.
    type __Ctx = import('vue').ComponentPublicInstance;
    const __ctx = undefined as unknown as __Ctx;
    const $attrs = __ctx.$attrs;
    const $slots = __ctx.$slots;
    const $refs = __ctx.$refs;
    const $emit = __ctx.$emit;
    void __ctx; void $attrs; void $slots; void $refs; void $emit;

  // Props are available in template as variables
  // Access via `propName` or `props.propName`
  const props: __VizePrettify<__DefineProps<Props>> = {} as __DefineProps<Props>;
  void props; // Mark as used to avoid TS6133
  const _as = props["as"];
  void _as;
  const asChild = props["asChild"];
  void asChild;

  void (props["as"]); // VBind
  // @vize-map: expr -> 270:272
  void (props.asChild); // VBind
  // @vize-map: expr -> 285:298

  // Component props type declarations
  type __VizeIsAny<T> = 0 extends (1 & T) ? true : false;
  type __VizeEmitListeners<C> = C extends { __vizeEmitProps?: infer __E } ? __VizeIsAny<__E> extends true ? {} : NonNullable<__E> : {};
  type __VizeIsGeneratedComponent<C> = C extends { readonly __vizeComponentMarker: true } ? true : false;
  type __VizeHasFallthroughProps<C> = __VizeIsGeneratedComponent<C> extends true ? C extends { readonly __vizeHasFallthroughProps: true } ? true : false : false;
  type __VizeFallthroughProps<C> = __VizeHasFallthroughProps<C> extends true ? C extends { readonly __vizeFallthroughProps?: infer __F } ? __VizeIsAny<__F> extends true ? {} : NonNullable<__F> : {} : {};
  type __VizeRequiredFallthroughProps<C, __F = __VizeFallthroughProps<C>, __K = __VizeRequiredKeys<__F>> = [__K] extends [never] ? {} : { [K in keyof __F as K extends __K ? K : never]: __F[K] };
  type __VizeVueVNodeProps = import('vue').VNodeProps;
  type __VizeVueAllowedComponentProps = import('vue').AllowedComponentProps;
  type __VizeVueComponentCustomProps = import('vue').ComponentCustomProps;
  interface __VizePublicComponentAttrs extends __VizeVueVNodeProps, __VizeVueAllowedComponentProps, __VizeVueComponentCustomProps {}
  type __VizeAllowedFallthroughAttrs<C> = __VizeHasFallthroughProps<C> extends true ? Record<string, unknown> : {};
  type __VizeAttrCamel<S extends string> = S extends `${infer __H}-${infer __T}` ? `${__H}${Capitalize<__VizeAttrCamel<__T>>}` : S;
  type __VizeNativeAttrNames = { [K in keyof __VizeNativeElements & string]: keyof __VizeNativeElements[K] }[keyof __VizeNativeElements & string] & string;
  type __VizeGlobalHtmlAttrs = __VizeIsAny<__VizeNativeElements> extends true ? {} : { [K in __VizeNativeAttrNames as K | __VizeAttrCamel<K>]?: unknown } & { [K in `data${string}`]?: unknown };
  type __VizeComponentCheckTail<C> = __VizeIsGeneratedComponent<C> extends true ? __VizePublicComponentAttrs & __VizeGlobalHtmlAttrs & __VizeAllowedFallthroughAttrs<C> : __VizePublicComponentAttrs & __VizeGlobalHtmlAttrs;
  type __VizeComponentCheckProps<P, T> = { readonly [K in keyof P]: P[K] } & T;
  type __VizePublicProps<C> = C extends { new (...args: any[]): { $props: infer __P } } ? __P : C extends (props: infer __P, ...args: any[]) => any ? __P : {};
  type __VizeInstanceRawProps<C> = C extends { new (): { readonly __vizeRawProps?: infer __P } } ? __VizeIsAny<__P> extends true ? __VizePublicProps<C> : __P : __VizePublicProps<C>;
  type __VizeStaticRawProps<C> = C extends { readonly __vizeRawProps?: infer __P } ? __VizeIsAny<__P> extends true ? __VizePublicProps<C> : __P : __VizePublicProps<C>;
  type __VizeHasInstanceRawProps<C> = __VizeIsGeneratedComponent<C> extends true ? C extends { new (): { readonly __vizeRawProps?: infer __P } } ? __VizeIsAny<__P> extends true ? false : true : false : false;
  type __VizeHasStaticRawProps<C> = __VizeIsGeneratedComponent<C> extends true ? C extends { readonly __vizeRawProps?: infer __P } ? __VizeIsAny<__P> extends true ? false : true : false : false;
  type __VizeComponentRawProps<C> = __VizeHasInstanceRawProps<C> extends true ? __VizeInstanceRawProps<C> : __VizeStaticRawProps<C>;
  type __VizeHasRawProps<C> = __VizeHasInstanceRawProps<C> extends true ? true : __VizeHasStaticRawProps<C>;
  type __VizeFallthroughValue<C, K extends PropertyKey> = __VizeHasFallthroughProps<C> extends true ? C extends { readonly __vizeFallthroughProps?: infer __F } ? __VizeIsAny<__F> extends true ? unknown : __VizePropValue<NonNullable<__F>, K, unknown> : unknown : unknown;
  type __VizePropChecker<C, P, T = __VizeComponentCheckTail<C>> = __VizeIsAny<C> extends true ? (props: { readonly [K in keyof P]: P[K] } & Record<string, unknown>) => void : C extends { __vizeCheck: infer __F } ? __VizeIsAny<__F> extends true ? (props: __VizeComponentCheckProps<P, T>) => void : __F extends (...args: any[]) => any ? __F : (props: __VizeComponentCheckProps<P, T>) => void : (props: __VizeComponentCheckProps<P, T>) => void;
  type __VizePropValue<P, K extends PropertyKey, F = unknown, __V = P extends unknown ? (K extends keyof P ? P[K] : never) : never> = [__V] extends [never] ? F : __V;
  type __VizeStructuralSlots<C> = C extends { readonly __vizeSlots?: infer __S } ? NonNullable<__S> : any;
  type __VizeRequiredSlotKeys<__S> = { [__K in keyof __S]-?: undefined extends __S[__K] ? never : __K }[keyof __S];
  type __VizeMissingRequiredSlots<__S, __P> = Exclude<__VizeRequiredSlotKeys<__S>, keyof __P>;
  type __VizeRequiredSlots<__S, __P> = __VizeIsAny<__S> extends true ? {} : string extends keyof __S ? {} : [keyof __S] extends [never] ? {} : [__VizeMissingRequiredSlots<__S, __P>] extends [never] ? {} : { readonly __vizeMissingSlots: __VizeMissingRequiredSlots<__S, __P> };
  // @vize-map: component -> 258:302
  type __Child_Props_0 = typeof Child extends { __vizeCheck: infer __F } ? (__VizeIsAny<__F> extends true ? __VizeComponentRawProps<typeof Child> : Record<string, unknown>) : __VizeComponentRawProps<typeof Child>;
  type __Child_Component_0 = typeof Child;
  type __Child_CheckProps_0 = __Child_Props_0 & __VizeEmitListeners<__Child_Component_0> & __VizeRequiredFallthroughProps<__Child_Component_0>;
  type __Child_CheckTail_0 = __VizeComponentCheckTail<__Child_Component_0>;
  type __Child_ValueProps_0 = __Child_Props_0 & __VizeEmitListeners<__Child_Component_0> & __VizePublicComponentAttrs;
  type __Child_FallthroughValue_0<K extends PropertyKey> = __VizeFallthroughValue<__Child_Component_0, K>;
  type __Child_Check_0 = __VizePropChecker<__Child_Component_0, __Child_CheckProps_0, __Child_CheckTail_0>;
  type __Child_0_prop_as = __VizePropValue<__Child_ValueProps_0, 'as', __Child_FallthroughValue_0<'as'>>;
  type __Child_0_prop_as_child = __VizePropValue<__Child_ValueProps_0, 'asChild', __Child_FallthroughValue_0<'as-child'>>;

  // Component template navigation references
  void Child;
  const { } = undefined as unknown as __Child_Props_0;
  const __vize_props_nav_0 = undefined as unknown as __Child_Props_0 & Record<string, unknown>;
  void __vize_props_nav_0.as;
  void __vize_props_nav_0.asChild;

  // Component props value checks (template scope)
  // @vize-map: prop -> 265:273
  const __vize_prop_check_0_as: __Child_0_prop_as = props["as"];
  void __vize_prop_check_0_as;
  // @vize-map: prop -> 274:299
  const __vize_prop_check_0_as_child: __Child_0_prop_as_child = props.asChild;
  void __vize_prop_check_0_as_child;
  (undefined as unknown as __Child_Check_0)({
    "as": props["as"],
    "asChild": props.asChild,
  });
  type __VizeSlotContract_0 = __VizeStructuralSlots<typeof Child>;
  const __vize_required_slots_0: __VizeRequiredSlots<__VizeSlotContract_0, {}> = {};
  void __vize_required_slots_0;

  // Mark used components as referenced
  void Child;

  // Reference setup bindings (used in template/CSS v-bind)
  void Child; void as; void asChild; void props;
  })();

  // Compiler-macro results contribute to the component signature
  void props;
}

// Invoke setup to verify types
__setup();

export type Emits = {};
type __VizeSlots = {};
export type { __VizeSlots as Slots };

// ========== Default Export ==========
type __VizeComponentInstance = {
  $props: Props;
  readonly __vizeRawProps?: Props;
  $emit: __VizePublicEmit<Emits>;
  $slots: __VizePublicSlots<__VizeSlots>;
} & __VizeComponentPublicBase;
type __VizeComponentConstructor = new <__VizeAuthoredProps = unknown>(props?: __VizeAuthoredProps & __VizeComponentInput<Props, {}, __VizeAuthoredProps>, ...args: any[]) => __VizeUsePublicInstance<__VizeAuthoredProps> extends true ? __VizeComponentInstance : Omit<__VizeComponentInstance, '$props'> & {
$props: __VizeAuthoredKeyWitness<__VizeAuthoredProps> & __VizeComponentInputProps<Props, {}> & __VizeComponentInputGuard<Props, {}, __VizeAuthoredProps>;
};
type __VizeVueComponentOptions = {
  [key: string]: any;
  name?: string;
  __name?: string;
  __file?: string;
  __vccOpts?: any;
  props?: any;
  emits?: any;
  slots?: any;
  setup?: any;
  render?: Function;
  components?: any;
  directives?: any;
  inheritAttrs?: boolean;
  compatConfig?: any;
  call?: (this: unknown, ...args: unknown[]) => never;
  __isFragment?: never;
  __isTeleport?: never;
  __isSuspense?: never;
  __defaults?: any;
  __vapor?: boolean;
  __multiRoot?: boolean;
  __isKeepAlive?: boolean;
  __isBuiltIn?: boolean;
};
declare const __vize_component__: { readonly __vizeComponentMarker: true; readonly __vizeRawProps?: Props; readonly __vizeHasFallthroughProps: true; readonly __vizeFallthroughProps?: Record<string, unknown>; } & __VizeComponentConstructor & __VizeVueComponentOptions;
export default __vize_component__;
